force-app/main/default/objects/PORSAStoreSettings__c/PORSAStoreSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Definición de comportamiento de stores B2B</description>
    <label>PORSA Store Settings</label>
</CustomObject>