force-app/main/default/objects/PORSAStoreSettings__c/fields/CaptureURL__c.field-meta.xml
<CustomField>
    <fullName>CaptureURL__c</fullName>
    <label>XXXCapture URL</label>
    <type>Url</type>
</CustomField>