force-app/main/default/objects/PORSAStoreSettings__c/fields/DevelopersEmails__c.field-meta.xml
<CustomField>
    <fullName>DevelopersEmails__c</fullName>
    <description>Emails of the developers to receive a copy (bcc) of the confrimation email</description>
    <label>Developers Emails</label>
    <length>128</length>
    <type>Text</type>
</CustomField>