force-app/main/default/objects/PORSAStoreSettings__c/fields/EnableSAPPriceValidation__c.field-meta.xml
<CustomField>
    <fullName>EnableSAPPriceValidation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Requires prices validated against SAP (by simulating a fake order)</description>
    <label>XXXEnable SAP Price Validation</label>
    <type>Checkbox</type>
</CustomField>