force-app/main/default/objects/PORSAStoreSettings__c/fields/ErrorURL__c.field-meta.xml
<CustomField>
    <fullName>ErrorURL__c</fullName>
    <label>XXXError URL</label>
    <type>Url</type>
</CustomField>