force-app/main/default/objects/PORSAStoreSettings__c/fields/PaymentGatewayURL__c.field-meta.xml
<CustomField>
    <fullName>PaymentGatewayURL__c</fullName>
    <label>XXXPayment Gateway URL</label>
    <type>Url</type>
</CustomField>