force-app/main/default/objects/PORSAStoreSettings__c/fields/RedirectTo__c.field-meta.xml
<CustomField>
    <fullName>RedirectTo__c</fullName>
    <description>URL a la que redirige la pa´gina de response y de error (debe estar en el site del B2B)</description>
    <label>XXXRedirectTo</label>
    <type>Url</type>
</CustomField>