force-app/main/default/objects/PORSAStoreSettings__c/fields/ResponseURL__c.field-meta.xml
<CustomField>
    <fullName>ResponseURL__c</fullName>
    <label>XXXResponse URL</label>
    <type>Url</type>
</CustomField>