force-app/main/default/objects/PORSAStoreSettings__c/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <label>XXXSecret</label>
    <length>80</length>
    <type>Text</type>
</CustomField>