force-app/main/default/objects/PORSAStoreSettings__c/fields/SendConfirmation__c.field-meta.xml
<CustomField>
    <fullName>SendConfirmation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sends a confirmation to the customer after creating an email</description>
    <label>XXXSend Confirmation</label>
    <type>Checkbox</type>
</CustomField>