force-app/main/default/objects/PORSAStoreSettings__c/fields/SendConfirmationToOwner__c.field-meta.xml
<CustomField>
    <fullName>SendConfirmationToOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XXXSend Confirmation to Rep</label>
    <type>Checkbox</type>
</CustomField>