force-app/main/default/objects/PORSAStoreSettings__c/fields/StoreId__c.field-meta.xml
<CustomField>
    <fullName>StoreId__c</fullName>
    <externalId>true</externalId>
    <label>Store Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>