force-app/main/default/objects/PORSAStoreSettings__c/fields/WorkspaceId__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceId__c</fullName>
    <label>CMS Workspace Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>